Challenge 3 Done Again

--- a/your-code/Challenge - 3 Albert.ipynb
+++ b/your-code/Challenge - 3 Albert.ipynb
@@ -1008,7 +1008,7 @@
     }
    ],
    "source": [
-    "# Showing top 10 countries with most VIP customers\n",
+    "# Showing top 10 countries with most 'VipPre' customers\n",
     "top_10_VipPre = cust_tamount.groupby(['Country'])['VipPre'].sum().sort_values(ascending=False).head(10)\n",
     "\n",
     "top_10_VipPre\n"
