Challenge 2 Done Again

--- a/your-code/Challenge-2 Albert.ipynb
+++ b/your-code/Challenge-2 Albert.ipynb
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1043,9 +1043,17 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 13,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(800, 37)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1053,7 +1061,7 @@
     "\n",
     "type_encode = pd.concat([t1_cat_encode, t2_cat_encode], axis=1)\n",
     "\n",
-    "type_encode.head()"
+    "display(type_encode.head(), type_encode.shape)"
    ]
   },
   {
